# parallel_etl

./: .env.example  Dockerfile  README.md  docker-compose.yml
backend/: index.js  package.json
cron/: entrypoint.sh  run_pipeline.sh
engine/: CMakeLists.txt
engine/include/core/: loader.h  producer.h  transformer.h
engine/include/models/: data_chunk.h
engine/include/utils/: db_connection.h  thread_safe_queue.h
engine/src/: main.cpp
engine/src/core/: loader.cpp  producer.cpp  transformer.cpp
engine/src/utils/: db_connection.cpp
frontend/src/: App.jsx
